--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,34 @@
 aniso8601==6.0.0
+backcall==0.1.0
+certifi==2020.12.5
 Click==7.0
+colorama==0.4.3
+decorator==4.4.1
 Flask==1.0.3
 Flask-Cors==3.0.7
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
+ipykernel==5.1.3
+ipython==7.11.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.15.2
 Jinja2==2.10.1
-MarkupSafe==1.1.1
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
+parso==0.5.2
+pickleshare==0.7.5
+prompt-toolkit==3.0.2
 psycopg2-binary==2.8.2
+Pygments==2.5.2
 pytz==2019.1
+pywin32==227
+pyzmq==18.1.1
 six==1.12.0
 SQLAlchemy==1.3.4
+tornado==6.0.3
+traitlets==4.3.3
+wcwidth==0.1.8
 Werkzeug==0.15.4
+wincertstore==0.2
